[gd_scene load_steps=33 format=2]

[ext_resource path="res://Art/BG-temp.png" type="Texture" id=1]
[ext_resource path="res://Inventory.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Inter-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/RedTick.png" type="Texture" id=4]
[ext_resource path="res://Art/GreenTick.png" type="Texture" id=5]
[ext_resource path="res://Art/NewUI/SubPanel.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Prompt/Prompt-Medium.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Fonts/Prompt/Prompt-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://search_part.gd" type="Script" id=9]
[ext_resource path="res://Art/NewUI/MainPanel.png" type="Texture" id=10]
[ext_resource path="res://Art/Icons/AutoHypenIcon_off.png" type="Texture" id=11]
[ext_resource path="res://Art/Icons/AutoHypenIcon_on.png" type="Texture" id=12]
[ext_resource path="res://Art/Icons/InvSign.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.0156863, 0.6, 0.8, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=6]
size = 41
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 41
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 27
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0156116, 0.601559, 0.799316, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=12]
size = 36
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 12 )

[sub_resource type="DynamicFont" id=18]
size = 36
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=19]
default_font = SubResource( 18 )

[sub_resource type="DynamicFont" id=14]
size = 54
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.00784314, 0.635294, 0.847059, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Bg-temp" type="Sprite" parent="."]
position = Vector2( 400, 640 )
texture = ExtResource( 1 )

[node name="search_part" type="LineEdit" parent="."]
margin_left = 133.0
margin_top = 204.0
margin_right = 677.0
margin_bottom = 307.0
theme = SubResource( 5 )
custom_styles/normal = SubResource( 17 )
align = 1
max_length = 11
clear_button_enabled = true
placeholder_text = "Search for part"
script = ExtResource( 9 )

[node name="SubPanel" type="Sprite" parent="."]
position = Vector2( 405, 764 )
texture = ExtResource( 6 )

[node name="Control" type="Control" parent="SubPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -366.0
margin_top = -469.5
margin_right = -366.0
margin_bottom = -469.5

[node name="MainPanel" type="Sprite" parent="SubPanel/Control"]
visible = false
position = Vector2( 366, -13 )
texture = ExtResource( 10 )

[node name="GreenTick" type="Sprite" parent="SubPanel/Control"]
visible = false
position = Vector2( 605.45, 747.075 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="RedTick" type="Sprite" parent="SubPanel/Control"]
visible = false
position = Vector2( 605.45, 747.075 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )

[node name="instock_label" type="Label" parent="SubPanel/Control"]
margin_left = 43.0
margin_top = 676.0
margin_right = 480.0
margin_bottom = 787.0
theme = SubResource( 7 )
align = 1
valign = 1

[node name="title_label" type="Label" parent="SubPanel/Control"]
visible = false
margin_left = 45.0
margin_top = 27.0
margin_right = 664.0
margin_bottom = 116.0
theme = SubResource( 9 )
text = "Inventory Manager"
align = 1
valign = 1

[node name="sub_label" type="Label" parent="SubPanel/Control"]
visible = false
margin_left = 11.0
margin_top = 128.0
margin_right = 701.0
margin_bottom = 182.0
theme = SubResource( 11 )
text = "Sub title text loren Managet"
align = 1

[node name="show_part_label_new" type="RichTextLabel" parent="SubPanel/Control"]
margin_left = 75.0
margin_top = 653.5
margin_right = 664.0
margin_bottom = 741.5
size_flags_horizontal = 3
theme = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
bbcode_enabled = true

[node name="show_part_label_new1" type="Label" parent="SubPanel/Control"]
visible = false
margin_left = 72.0
margin_top = 265.0
margin_right = 625.0
margin_bottom = 586.0
theme = SubResource( 13 )
text = "------------"
align = 1
valign = 1
autowrap = true

[node name="InvSign" type="Sprite" parent="SubPanel/Control"]
position = Vector2( 375, -241.5 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="SubPanel/Control"]
margin_left = 47.0
margin_top = 93.0
margin_right = 714.0
margin_bottom = 187.0
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="SubPanel/Control"]
margin_left = 22.0
margin_top = 18.0
margin_right = 719.0
margin_bottom = 565.0

[node name="pn_label" type="Label" parent="SubPanel/Control/VBoxContainer"]
margin_right = 697.0
margin_bottom = 56.0
theme = SubResource( 19 )
align = 1
valign = 1
autowrap = true

[node name="des_label" type="Label" parent="SubPanel/Control/VBoxContainer"]
margin_top = 60.0
margin_right = 697.0
margin_bottom = 116.0
theme = SubResource( 19 )
align = 1
valign = 1
autowrap = true

[node name="quan_label" type="Label" parent="SubPanel/Control/VBoxContainer"]
margin_top = 120.0
margin_right = 697.0
margin_bottom = 176.0
theme = SubResource( 19 )
align = 1
valign = 1
autowrap = true

[node name="quan_label2" type="Label" parent="SubPanel/Control/VBoxContainer"]
margin_top = 180.0
margin_right = 697.0
margin_bottom = 236.0
theme = SubResource( 19 )
align = 1
valign = 1
autowrap = true

[node name="edit_button" type="Button" parent="SubPanel/Control"]
margin_left = 539.0
margin_top = 575.5
margin_right = 657.0
margin_bottom = 619.5
text = "EDIT"

[node name="back_button" type="Button" parent="."]
margin_left = -14.0
margin_top = 86.0
margin_right = 68.0
margin_bottom = 191.0
theme = SubResource( 15 )
custom_colors/font_color = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_styles/normal = SubResource( 16 )
text = "<"

[node name="auto_hypen" type="CheckButton" parent="."]
show_behind_parent = true
margin_left = 694.0
margin_top = 202.0
margin_right = 789.0
margin_bottom = 246.0

[node name="Label" type="Label" parent="auto_hypen"]
margin_left = -17.0
margin_top = -12.0
margin_right = 95.0
margin_bottom = 21.0
text = "Auto Hypen: 3"

[node name="AutoHypenIconOff" type="Sprite" parent="."]
position = Vector2( 740, 240 )
texture = ExtResource( 11 )

[node name="AutoHypenIconOn" type="Sprite" parent="."]
position = Vector2( 740, 240 )
texture = ExtResource( 12 )

[connection signal="text_entered" from="search_part" to="." method="_on_search_part_text_entered"]
[connection signal="pressed" from="SubPanel/Control/edit_button" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="auto_hypen" to="." method="_on_auto_hypen_toggled"]
